[gd_scene load_steps=5 format=3 uid="uid://fr2oaq77f7he"]

[ext_resource type="Script" path="res://menu.gd" id="1_7ixpj"]
[ext_resource type="Texture2D" uid="uid://b2ar0x3yyw00q" path="res://imgs/plyr_0.png" id="1_63y7r"]

[sub_resource type="Gradient" id="Gradient_v5m7u"]
offsets = PackedFloat32Array(0, 0.128834, 0.300613, 0.490798)
colors = PackedColorArray(0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_dbq3v"]
offsets = PackedFloat32Array(0, 0.19403, 0.365672, 0.514925)
colors = PackedColorArray(1, 0, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ixpj")

[node name="play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -32.0
offset_right = 160.0
grow_vertical = 0
theme_override_constants/outline_size = 8
text = "PLAY"

[node name="Particles" type="CheckButton" parent="."]
layout_mode = 1
offset_right = 150.0
offset_bottom = 32.0
theme_override_constants/outline_size = 8
button_pressed = true
text = "Particles:"

[node name="Border" type="CheckButton" parent="."]
layout_mode = 1
offset_top = 32.0
offset_right = 150.0
offset_bottom = 64.0
theme_override_constants/outline_size = 8
button_pressed = true
text = "Border:"

[node name="Animations" type="CheckButton" parent="."]
layout_mode = 1
offset_top = 64.0
offset_right = 150.0
offset_bottom = 120.0
theme_override_constants/outline_size = 8
button_pressed = true
text = "Smooth
Animations: "

[node name="Music" type="CheckButton" parent="."]
layout_mode = 1
offset_top = 112.0
offset_right = 150.0
offset_bottom = 144.0
theme_override_constants/outline_size = 8
button_pressed = true
text = "Music: "

[node name="Color" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 344.0
offset_top = -66.0
offset_right = 439.0
offset_bottom = -35.0
grow_vertical = 0
theme_override_constants/outline_size = 8
selected = 0
item_count = 4
popup/item_0/text = "Orange"
popup/item_1/text = "Blue"
popup/item_1/id = 1
popup/item_2/text = "Purple"
popup/item_2/id = 2
popup/item_3/text = "Nothing"
popup/item_3/id = 3

[node name="Label" type="Label" parent="Color"]
layout_mode = 0
offset_left = -48.0
offset_top = 4.0
offset_right = -2.0
offset_bottom = 27.0
theme_override_constants/outline_size = 8
text = "Color:"

[node name="preview" type="Sprite2D" parent="."]
self_modulate = Color(0.935372, 0.562891, 0.0896673, 1)
position = Vector2(371, 135)
scale = Vector2(10, 10)
texture = ExtResource("1_63y7r")

[node name="yeeey" type="CPUParticles2D" parent="."]
position = Vector2(70, 210)
emitting = false
amount = 16
lifetime = 5.0
one_shot = true
explosiveness = 1.0
randomness = 0.5
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 5.0
spread = 180.0
gravity = Vector2(0, 128)
initial_velocity_max = 150.0
scale_amount_min = 5.0
scale_amount_max = 10.0
color_ramp = SubResource("Gradient_v5m7u")
color_initial_ramp = SubResource("Gradient_dbq3v")

[node name="Score" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 13.0
offset_right = 202.0
offset_bottom = 81.0
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Last Score: 0
Best Score: 0"
fit_content = true

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Particles" to="." method="_on_particles_pressed"]
[connection signal="pressed" from="Border" to="." method="_on_lights_pressed"]
[connection signal="pressed" from="Animations" to="." method="_on_animations_pressed"]
[connection signal="pressed" from="Music" to="." method="_on_music_pressed"]
[connection signal="item_selected" from="Color" to="." method="_on_color_item_selected"]
